--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         relaciones y su valor. Tu forma de ver el mundo y tu enfoque positivo de la vida me han 
         contagiado de energía.</p>
       <div class="foto">
-        <img src="img/380201631_277915697962287_4560857398451162971_n.jpg" alt="Recuerdo 3">
+        <img src="img/WhatsApp Image 2025-05-03 at 9.50.24 PM.jpeg" alt="Recuerdo 3">
         <p class="texto-largo"></p>
       </div>
 
@@ -94,6 +94,8 @@
       <p class="textBox" style="font-size: 2em;">
         Gracias por compartir un pedacito de tu vida conmigo, por hacerme reír, por las pláticas, 
         por escucharme, gracias por cruzarte en mi camino y traer alegria a mi vida.
+        <br><br> 
+        Te quiero ♡
       </p>
     </main>
   </div>
