--- a/index.html
+++ b/index.html
@@ -39,8 +39,7 @@
       </div>
     </main>
     <main class="galeria">
-      
-      <p class="textBox">Un día conocí a una chica realmente hermosa, su sonrisa era tan única, tan diferente, 
+      <p class="textBoxPhoto">Un día conocí a una chica realmente hermosa, su sonrisa era tan única, tan diferente, 
         me traía paz y tranquilidad, éramos de mundos totalmente opuestos. Ella era un sol que iluminaba 
         a todos con esa sonrisa tan hermosa, sus ojos marrones destacaban en ella, su cabello lacio era 
         totalmente envidiable, era simplemente única ♡</p>
@@ -54,13 +53,13 @@
         <img src="img/WhatsApp Image 2025-05-03 at 2.24.21 AM.jpeg" alt="Recuerdo 2">
         <p class="texto-largo"></p>
       </div>
-      <p class="textBox">Un día llego a mi vida sin razón alguna, con un simple "Hola" me dio a conocer 
+      <p class="textBoxPhoto">Un día llego a mi vida sin razón alguna, con un simple "Hola" me dio a conocer 
         a una valiosa persona, estár con ella simplemente te da paz, por su amor y sinceridad, nunca 
         mostró un lado malo, ni maldad en su corazón, mostró su lado único y valioso, y descubrí que 
         estaba rota, pero daba lo mejor de ella, con el tiempo ese dolor y sufrimiento han ido sanando 
         igual que su mente, es unica e irremplazable.</p>
 
-      <p class="textBox"> Tu capacidad para amar y tu bondad infinita me han enseñado tanto sobre las 
+      <p class="textBoxPhoto"> Tu capacidad para amar y tu bondad infinita me han enseñado tanto sobre las 
         relaciones y su valor. Tu forma de ver el mundo y tu enfoque positivo de la vida me han 
         contagiado de energía.</p>
       <div class="foto">
@@ -72,13 +71,13 @@
         <img src="img/387589600_993059815141392_3408710450602285637_n.jpg" alt="Recuerdo 4">
         <p class="texto-largo"></p>
       </div>
-      <p class="textBox">Alguien tremendamente linda, que encanta con su belleza y remata con su 
+      <p class="textBoxPhoto">Alguien tremendamente linda, que encanta con su belleza y remata con su 
         inteligencia. Con un alma guerrera, aguerrida y regía ante los momentos difíciles; un corazón
          que a pesar de las tormentas que ha atravesado sigue irradiando alegría y una bella 
          sonrisa con la que contagias felicidad.
       </p>
 
-      <p class="textBox">Para algunos talves seas una persona más, pero para mí eres alguien que no 
+      <p class="textBoxPhoto">Para algunos talves seas una persona más, pero para mí eres alguien que no 
         quisiera perder por todo lo que tú vales para mí.
         <br><br>
         Gracias por estar, por ser tan genuina, por escucharme y soportar cada una de mis ocurrencias.
@@ -91,16 +90,14 @@
         <p class="texto-largo"></p>
       </div>
 
-      <p class="textBox" style="font-size: 2em;">
+      <p class="textBoxPhoto" style="font-size: 2em;">
         Gracias por compartir un pedacito de tu vida conmigo, por hacerme reír, por las pláticas, 
-        por escucharme, gracias por cruzarte en mi camino y traer alegria a mi vida.
+        por escucharme, gracias por cruzarte en mi camino y traer alegria a mi vida. Que la pases bien
+        en tu día.
         <br><br> 
         Te quiero ♡
       </p>
     </main>
   </div>
-
-  <footer id="finalGalery">
-  </footer>
 </body>
 </html>
