--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         relaciones y su valor. Tu forma de ver el mundo y tu enfoque positivo de la vida me han 
         contagiado de energía.</p>
       <div class="foto">
-        <img src="img/WhatsApp Image 2025-05-03 at 9.50.24 PM.jpeg" alt="Recuerdo 3">
+        <img src="img/380201631_277915697962287_4560857398451162971_n.jpg" alt="Recuerdo 3">
         <p class="texto-largo"></p>
       </div>
 
